[Windows] hs_err files sometimes miss information about the code containing the error

XMLWordPrintable

    • b02
    • x86
    • windows

        Some hs_err files were uploaded for JDK-8307683. The error "DEBUG MESSAGE: duplicated predicate failed which is impossible" is triggered by a C2 compiled method, but the hs_err files miss information about the nmethod. (The native stack trace is unable to identify it.) This should get added because it's important to analyze the bug or to find a warkaround (exclude).

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: