8309613: [Windows] hs_err files sometimes miss information about the code containing the error