src/hotspot/os_cpu/windows_x86/os_windows_x86.cpp
@@ -223,7 +223,7 @@ bool os::register_code_area(char *low, char *high) {
  * loop in vmError.cpp. We need to roll our own loop.
  */
 bool os::platform_print_native_stack(outputStream* st, const void* context,
-                                     char *buf, int buf_size)
+                                     char *buf, int buf_size, address& lastpc)
 {
   CONTEXT ctx;
   if (context != NULL) {
@@ -244,14 +244,14 @@ bool os::platform_print_native_stack(outputStream* st, const void* context,
   stk.AddrPC.Mode         = AddrModeFlat;
 
   int count = 0;
-  address lastpc = 0;
+  address lastpc_internal = 0;
   while (count++ < StackPrintLimit) {
     intptr_t* sp = (intptr_t*)stk.AddrStack.Offset;
     intptr_t* fp = (intptr_t*)stk.AddrFrame.Offset; // NOT necessarily the same as ctx.Rbp!
     address pc = (address)stk.AddrPC.Offset;
 
     if (pc != NULL) {
-      if (count == 2 && lastpc == pc) {
+      if (count == 2 && lastpc_internal == pc) {
         // Skip it -- StackWalk64() may return the same PC
         // (but different SP) on the first try.
       } else {
@@ -267,12 +267,13 @@ bool os::platform_print_native_stack(outputStream* st, const void* context,
         }
         st->cr();
       }
-      lastpc = pc;
+      lastpc_internal = pc;
     }
 
     PVOID p = WindowsDbgHelp::symFunctionTableAccess64(GetCurrentProcess(), stk.AddrPC.Offset);
     if (!p) {
       // StackWalk64() can't handle this PC. Calling StackWalk64 again may cause crash.
+      lastpc = lastpc_internal;
       break;
     }
 
